; ModuleID = '/home/carl/AnghaBench/lab/engine/code/q3_ui/extr_ui_playermodel.c_PlayerModel_UpdateModel.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/q3_ui/extr_ui_playermodel.c_PlayerModel_UpdateModel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@s_playermodel = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@YAW = common dso_local global i64 0, align 8
@PITCH = common dso_local global i64 0, align 8
@ROLL = common dso_local global i64 0, align 8
@LEGS_IDLE = common dso_local global i32 0, align 4
@TORSO_STAND = common dso_local global i32 0, align 4
@WP_MACHINEGUN = common dso_local global i32 0, align 4
@qfalse = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @PlayerModel_UpdateModel to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @PlayerModel_UpdateModel() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = call i32 @memset(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @s_playermodel, i32 0, i32 0), i32 0, i32 4)
  %4 = load i32*, i32** %1, align 8
  %5 = load i64, i64* @YAW, align 8
  %6 = getelementptr inbounds i32, i32* %4, i64 %5
  store i32 150, i32* %6, align 4
  %7 = load i32*, i32** %1, align 8
  %8 = load i64, i64* @PITCH, align 8
  %9 = getelementptr inbounds i32, i32* %7, i64 %8
  store i32 0, i32* %9, align 4
  %10 = load i32*, i32** %1, align 8
  %11 = load i64, i64* @ROLL, align 8
  %12 = getelementptr inbounds i32, i32* %10, i64 %11
  store i32 0, i32* %12, align 4
  %13 = load i32*, i32** %2, align 8
  %14 = call i32 @VectorClear(i32* %13)
  %15 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @s_playermodel, i32 0, i32 1), align 4
  %16 = call i32 @UI_PlayerInfo_SetModel(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @s_playermodel, i32 0, i32 0), i32 %15)
  %17 = load i32, i32* @LEGS_IDLE, align 4
  %18 = load i32, i32* @TORSO_STAND, align 4
  %19 = load i32*, i32** %1, align 8
  %20 = load i32*, i32** %2, align 8
  %21 = load i32, i32* @WP_MACHINEGUN, align 4
  %22 = load i32, i32* @qfalse, align 4
  %23 = call i32 @UI_PlayerInfo_SetInfo(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @s_playermodel, i32 0, i32 0), i32 %17, i32 %18, i32* %19, i32* %20, i32 %21, i32 %22)
  ret void
}

declare dso_local i32 @memset(i32*, i32, i32) #1

declare dso_local i32 @VectorClear(i32*) #1

declare dso_local i32 @UI_PlayerInfo_SetModel(i32*, i32) #1

declare dso_local i32 @UI_PlayerInfo_SetInfo(i32*, i32, i32, i32*, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
